fix: fix hamburger symbol text alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -532,6 +532,7 @@ input#hamburger{
         .hamburger-symbol{
             font-size:40px;
             margin-right:10px;
+            text-align:center;
         }
     .page-header_item .navigation-list{
         flex: 2;
